# sptool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
acceptance-testing/: create_pair.cmd  pair_COM11_COM12.vspe
docs/: quick-start.md
spcore/: AnswerCommand.h  CMakeLists.txt  ClosePortCommand.h  Command.h  CommandFactory.h  CommandParser.h  Context.h  DelayCommand.h  OpenPortCommand.h  RepeatCommand.h  SendCommand.h  SerialPort.cpp  SerialPort.h
tech-docs/: ClassDiagram.vsdx  SequenceDiagramm.vsdx  UseCaseDiagram.vsdx
test-sptool/: AnswerCommandTest.h  CMakeLists.txt  CommandFactoryTest.h  CommandParserTest.h  DelayCommandTest.h  Integration_ReceivingDataTest.h  Integration_SendingData.h  MockOutput.h  MockSerialPort.h  SPDelayedWrite.h  SendCommandTest.h  main.cpp  test-defintions.h  test-sptool.cpp
